objects/PureCloud_Organization__c.object
<CustomObject>
    <fields>
        <fullName>AWS_Region__c</fullName>
        <description>Amazon Wed Services Region. Preferred region selected during signup from the end customer. The org can only exist in one of the regions.</description>
        <inlineHelpText>Amazon Wed Services Region. Preferred region selected during signup from the end customer. The org can only exist in one of the regions.</inlineHelpText>
        <label>AWS Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US (East)</fullName>
                </value>
                <value>
                    <fullName>Asia Pacific (Sydney)</fullName>
                </value>
                <value>
                    <fullName>Asia Pacific (Tokyo)</fullName>
                </value>
                <value>
                    <fullName>EU (Ireland)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PureCloud Organizations</relationshipLabel>
        <relationshipName>PureCloud_Organizations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Activated_Date__c</fullName>
        <description>The date the Organization is created in PureCloud. Same date when Org Status is set to &quot;Activated&quot;.</description>
        <inlineHelpText>The date the Organization is created in PureCloud. Same date when Org Status is set to &quot;Activated&quot;.</inlineHelpText>
        <label>Activated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Engaged_Date__c</fullName>
        <description>The first date when the organization has at least 50 chats have been sent by users</description>
        <inlineHelpText>The first date when the organization has at least 50 chats have been sent by users</inlineHelpText>
        <label>Engaged Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Org_ID__c</fullName>
        <description>The PureCloud globally unique identifier for an Organization</description>
        <externalId>true</externalId>
        <inlineHelpText>The PureCloud globally unique identifier for an Organization</inlineHelpText>
        <label>Org ID</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Legal_Name__c</fullName>
        <description>Official company name populated by the end customer when they enter a billing address on the self-serve signup page. Not always populated. This is integrated to the Account Legal Name field for self-serve customers.</description>
        <inlineHelpText>Official company name populated by the end customer when they enter a billing address on the self-serve signup page. Not always populated. This is integrated to the Account Legal Name field for self-serve customers.</inlineHelpText>
        <label>Org Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Name__c</fullName>
        <description>Name populated by the end customer when signing up for a PureCloud Org. This is required when setting up a new org. This name is saved via PureCloud’s directory / configuration API and is not necessarily unique.</description>
        <inlineHelpText>Name populated by the end customer when signing up for a PureCloud Org. This is required when setting up a new org. This name is saved via PureCloud’s directory / configuration API and is not necessarily unique.</inlineHelpText>
        <label>Org Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Short_Name__c</fullName>
        <description>System generated unique name generated by the directory / configuration API when we create an org. This is required when setting up a new org.</description>
        <inlineHelpText>System generated unique name generated by the directory / configuration API when we create an org. This is required when setting up a new org. For example, the short name for the org “Nate Org 479” is “nateorg479”.</inlineHelpText>
        <label>Org Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Status__c</fullName>
        <inlineHelpText>Signed Up is when the customer has been through the Sign Up form from inin.com., Activated is when the organization is created in PureCloud, Used is when an organization chat has been sent by a user. Engaged is when an organization has at least 50 chats</inlineHelpText>
        <label>Org Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Signed Up</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
                <value>
                    <fullName>Used</fullName>
                </value>
                <value>
                    <fullName>Engaged</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sign_Up_Date__c</fullName>
        <description>The date the customer completed the Sign Up form from the inin.com website</description>
        <inlineHelpText>The date the customer completed the Sign Up form from the inin.com website</inlineHelpText>
        <label>Sign Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <description>The date the Organization is de-activated in PureCloud. Users will not be able to access the org.</description>
        <inlineHelpText>The date the Organization is de-activated in PureCloud. Users will not be able to access the org.</inlineHelpText>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Chats__c</fullName>
        <label>Total Chats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Users_Logged_in_Once__c</fullName>
        <label>Total Users Logged in Once</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Users__c</fullName>
        <label>Total Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Used_Date__c</fullName>
        <description>The date the first chat was sent within the Org by the customer</description>
        <inlineHelpText>The date the first chat was sent within the Org by the customer</inlineHelpText>
        <label>Used Date</label>
        <type>Date</type>
    </fields>
    <label>PureCloud Organization</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Org_Legal_Name__c</columns>
        <columns>Org_Name__c</columns>
        <columns>Org_Short_Name__c</columns>
        <columns>Org_ID__c</columns>
        <columns>Sign_Up_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PC-ORG-{00000}</displayFormat>
        <label>PureCloud Organization Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PureCloud Organizations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>